Convert to auto.md

--- a/_includes/menu_en.html
+++ b/_includes/menu_en.html
@@ -8,7 +8,7 @@
 					<li><a {% if page.url == '/en/TableOfContents.html' %} class="MenuItemA" {% endif %} href="/en/TableOfContents.html"><span>Documentation</span></a></li>
 					<li><a {% if page.url == '/en/Screenshots.html' %} class="MenuItemA" {% endif %} href="/en/Screenshots.html"><span>Screenshots</span></a></li>
 					<li><a {% if page.url == '/en/Settings.html' %} class="MenuItemA" {% endif %} href="/en/Settings.html"><span>Setting</span></a></li>
-					<li><a {% if page.url == '/auto.html' %} class="MenuItemA" {% endif %} href="/auto.html"><span>Auto install</span></a></li>
+					<li><a {% if page.url == '/en/auto.html' %} class="MenuItemA" {% endif %} href="/en/auto.html"><span>Auto install</span></a></li>
 					<li><a {% if page.url == '/donate.html' %} class="MenuItemA" {% endif %} href="/donate.html"><span>Donate</span></a></li>
 					<li><a {% if page.url == '/en/AnsiEscapeCodes.html' %} class="MenuItemA" {% endif %} href="/en/AnsiEscapeCodes.html"><span>ANSI</span></a></li>
 					<li><a {% if page.url == '/en/Awards.html' %} class="MenuItemA" {% endif %} href="/en/Awards.html"><span>Awards</span></a></li>
