Add optional ReadAlso to root template

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -86,6 +86,8 @@ This page was saved from: {{site.url}}{{page.url}}
 
 </article>
 
+{% include readalso.html %}
+
 			</div><!-- .content-->
 		</div><!-- .container-->
 
