Reserve place for sitemap links

--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,5 +1,8 @@
 <footer>
 	<div class="footer">
 		<div id="footertext">Copyright Maximus5 © 2015</div>
+		<!--
+		<div id="footermap">Sitemap <a href="/sitemap.xml" rel="nofollow">xml</a>, <a href="/sitemap.html" rel="nofollow">html</a></div>
+		-->
 	</div>
 </footer>
