--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,8 +1,8 @@
 <div>
-  <span  id="a"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb"  itemref="b" >
-    <a href="{{ page.docfolder }}/" itemprop="url"><span itemprop="title">{{ site.site_name }}</span></a>
+  <span>
+    <a href="{{ page.docfolder }}/"><span>{{ site.site_name }}</span></a>
   </span>
-  <span  id="b"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.breadcrumbs %} itemref="c0" {% endif %}>
+  <span  id="a"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.breadcrumbs %} itemref="c0" {% endif %}>
     ›
     <a href="{{ page.docfolder }}/TableOfContents.html" itemprop="url"><span itemprop="title">{% if page.pagelang == 'ru' %}Содержание{% else %}Table of Contents{% endif %}</span></a>
   </span>{% for bc in page.breadcrumbs %}
