--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,19 +1,10 @@
 			<div class="block">
 				<div class="blocktitle">{% if page.docfolder != '/ru' %}Site search{% else %}Поиск по сайту{% endif %}</div>
 				<div class="blockcontent">
-					<script>
-					  (function() {
-					    var cx = '014346213573456449829:mmq1_nge2xw';
-					    var gcse = document.createElement('script');
-					    gcse.type = 'text/javascript';
-					    gcse.async = true;
-					    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-					        '//www.google.com/cse/cse.js?cx=' + cx;
-					    var s = document.getElementsByTagName('script')[0];
-					    s.parentNode.insertBefore(gcse, s);
-					  })();
-					</script>
-					<gcse:searchbox-only></gcse:searchbox-only>
+					<form method="GET" action="/search.html">
+						<div id="search-field-div"><input id="search-field" type="text" name="q" value=""></div>
+						<div id="search-button-div"><input id="search-button" type="submit" value="Search"></div>
+					</form>
 				</div>
 				<div class="blockbottom"></div>
 			</div>
