--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -28,6 +28,7 @@ This page was saved from: {{site.url}}{{page.url}}
 <meta property="og:image" content="{{page.og_image}}">{% endif %}
 
 {% if site.url != 'local' %}{% include analytics.html %}{% endif %}
+{% if site.url != 'local' %}{% include yametrica.html %}{% endif %}
 
 </head>
 
