Add WhatsNew and FAQ to Site Menu

--- a/_includes/menu_en.html
+++ b/_includes/menu_en.html
@@ -6,6 +6,8 @@
 					<!-- Menu starts -->
 					<li><a {% if page.url == '/en/Downloads.html' %} class="MenuItemA" {% endif %} href="/en/Downloads.html"><span>Download mirrors</span></a></li>
 					<li><a {% if page.url == '/en/TableOfContents.html' %} class="MenuItemA" {% endif %} href="/en/TableOfContents.html"><span>Documentation</span></a></li>
+					<li><a {% if page.url == '/en/Whats_New.html' %} class="MenuItemA" {% endif %} href="/en/Whats_New.html"><span>What's new</span></a></li>
+					<li><a {% if page.url == '/en/ConEmuFAQ.html' %} class="MenuItemA" {% endif %} href="/en/ConEmuFAQ.html"><span>ConEmu FAQ</span></a></li>
 					<li><a {% if page.url == '/en/Screenshots.html' %} class="MenuItemA" {% endif %} href="/en/Screenshots.html"><span>Screenshots</span></a></li>
 					<li><a {% if page.url == '/en/Settings.html' %} class="MenuItemA" {% endif %} href="/en/Settings.html"><span>Setting</span></a></li>
 					<li><a {% if page.url == '/en/auto.html' %} class="MenuItemA" {% endif %} href="/en/auto.html"><span>Auto install</span></a></li>
