--- a/_includes/menu_ru.html
+++ b/_includes/menu_ru.html
@@ -6,6 +6,8 @@
 					<!-- Menu starts -->
 					<li><a {% if page.url == '/ru/Downloads.html' %} class="MenuItemA" {% endif %} href="/ru/Downloads.html"><span>Зеркала загрузки</span></a></li>
 					<li><a {% if page.url == '/ru/TableOfContents.html' %} class="MenuItemA" {% endif %} href="/ru/TableOfContents.html"><span>Документация</span></a></li>
+					<li><a {% if page.url == '/en/Whats_New.html' %} class="MenuItemA" {% endif %} href="/en/Whats_New.html"><span>What's new</span></a></li>
+					<li><a {% if page.url == '/ru/ConEmuFAQ.html' %} class="MenuItemA" {% endif %} href="/ru/ConEmuFAQ.html"><span>ConEmu FAQ</span></a></li>
 					<li><a {% if page.url == '/ru/Screenshots.html' %} class="MenuItemA" {% endif %} href="/ru/Screenshots.html"><span>Скриншоты</span></a></li>
 					<li><a {% if page.url == '/ru/Settings.html' %} class="MenuItemA" {% endif %} href="/ru/Settings.html"><span>Настройка</span></a></li>
 					<li><a {% if page.url == '/en/auto.html' %} class="MenuItemA" {% endif %} href="/en/auto.html"><span>Автоматизация</span></a></li>
