--- a/_includes/menu_ru.html
+++ b/_includes/menu_ru.html
@@ -10,7 +10,7 @@
 					<li><a {% if page.url == '/ru/ConEmuFAQ.html' %} class="MenuItemA" {% endif %} href="/ru/ConEmuFAQ.html"><span>ConEmu FAQ</span></a></li>
 					<li><a {% if page.url == '/ru/Screenshots.html' %} class="MenuItemA" {% endif %} href="/ru/Screenshots.html"><span>Скриншоты</span></a></li>
 					<li><a {% if page.url == '/ru/Settings.html' %} class="MenuItemA" {% endif %} href="/ru/Settings.html"><span>Настройка</span></a></li>
-					<li><a {% if page.url == '/en/auto.html' %} class="MenuItemA" {% endif %} href="/en/auto.html"><span>Автоматизация</span></a></li>
+					<li><a {% if page.url == '/en/AutoInstall.html' %} class="MenuItemA" {% endif %} href="/en/AutoInstall.html"><span>Автоматизация</span></a></li>
 					<li><a {% if page.url == '/donate.html' %} class="MenuItemA" {% endif %} href="/donate.html"><span>Поддержать</span></a></li>
 					<li><a {% if page.url == '/ru/AnsiEscapeCodes.html' %} class="MenuItemA" {% endif %} href="/ru/AnsiEscapeCodes.html"><span>ANSI</span></a></li>
 					<li><a {% if page.url == '/ru/Awards.html' %} class="MenuItemA" {% endif %} href="/ru/Awards.html"><span>Awards</span></a></li>
