--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
-
+{% if page.noindex == true %}<meta name="robots" content="noindex">{% endif %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% if page.url == '/index.html' %}
