--- a/_includes/googleads.html
+++ b/_includes/googleads.html
@@ -1,9 +1,10 @@
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- conemu.github.io -->
+    <!-- conemu.github.io-responsive -->
     <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
+         style="display:block"
          data-ad-client="ca-pub-8810818700876198"
-         data-ad-slot="5792850468"></ins>
+         data-ad-slot="6677483266"
+         data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
