Use <header> tag

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- header -->{% comment %} ‘UTF-8’ {% endcomment %}
+<header>{% comment %} ‘UTF-8’ {% endcomment %}
 <div class="header">
   <div class="header-left">
     <div class="h-logo"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/"><img src="/img/logo.png"></a></div>
@@ -17,4 +17,4 @@
   </div>
   <div id="header-line"></div>
 </div>
-<!-- /header -->
+</header>
