--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>{% comment %} ‘UTF-8’ {% endcomment %}
 <div class="header">
   <div class="header-left">
-    <div class="h-logo"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/"><img src="/img/logo.png"></a></div>
+    <div class="h-logo"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/"><img src="/img/logo.png" alt="ConEmu-Maximus5 logo"></a></div>
     <div class="h-title-desc">
       <div class="h-title"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/">ConEmu</a></div>
       <div class="h-desc">{% if site.url != 'local' %}<a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/">{{ page.site_label }}</a>{% else %}<span id="media-width"></span><span id="media-orient"></span>{% endif %}</div>
