--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -49,7 +49,7 @@ This page was saved from: {{site.url}}{{page.url}}
 <body>
 
 <div class="wrapper">
-<div class="maincol" id="wikimaincol">
+<div class="maincol">
 
 {% include header.html %}
 
@@ -83,8 +83,8 @@ This page was saved from: {{site.url}}{{page.url}}
 
 	</div><!-- .middle-->
 
-</div><!-- maincol -->
-</div>
+</div><!-- .maincol -->
+</div><!-- .wrapper -->
 
 {% include copyright.html %}
 
