--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
+<link rel="icon apple-touch-icon" type="image/png" href="/img/logo-114.png" sizes="144x144">
 
 <meta name="author" content="@ConEmuMaximus5">
 
