--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -16,6 +16,7 @@
 {% endif %}
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
+<link rel="icon apple-touch-icon" type="image/png" href="/img/logo-114.png" sizes="144x144">
 
 <meta name="author" content="@ConEmuMaximus5">
 
