Add 'Suggest better edit' link

--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -62,7 +62,8 @@ This page was saved from: {{site.url}}{{page.url}}
 
 <!-- BackToContents start -->
 				<footer>
-				<div class="text stext"><a href="/ru/TableOfContents.html">Назад к оглавлению</a></div>
+				<span class="text stext"><a href="/ru/TableOfContents.html">Назад к оглавлению</a></span>
+				<span class="text stext"> | <a href="https://github.com/ConEmu/ConEmu.github.io/blob/master/{{page.path}}" rel="nofollow">Suggest better edit</a></span>
 				</footer>
 <!-- BackToContents end -->
 
