--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -62,7 +62,8 @@ This page was saved from: {{site.url}}{{page.url}}
 
 <!-- BackToContents start -->
 				<footer>
-				<div class="text stext"><a href="/en/TableOfContents.html">Back to the table of contents</a></div>
+				<span class="text stext"><a href="/en/TableOfContents.html">Back to the table of contents</a></span>
+				<span class="text stext"> | <a href="https://github.com/ConEmu/ConEmu.github.io/blob/master/{{page.path}}" rel="nofollow">Suggest better edit</a></span>
 				</footer>
 <!-- BackToContents end -->
 
