--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -79,7 +79,7 @@ and others. </p>
 	<li>transparency and desktop mode; </li>
 	<li>customizable starting tabs; </li>
 	<li>configurable and clickable status bar; </li>
-	<li>and more, and more... take a look at <a href="TableOfContents.html">Documentation</a>, <a href="Settings.html">Settings pages</a> and <a href="Whats_New.html">What's New</a>. </li>
+	<li>and more, and more... take a look at <a href="{{page.docfolder}}/TableOfContents.html">Documentation</a>, <a href="{{page.docfolder}}/Settings.html">Settings pages</a> and <a href="{{page.docfolder}}/Whats_New.html">What's New</a>. </li>
 </ul>
 
 <p>All settings are read from the registry or <a href="{{page.docfolder}}/Settings.html#ConEmu_.xml">ConEmu.xml</a> file (multiple named configurations are supported),
@@ -97,4 +97,4 @@ Most settings are configured using the Settings dialog, not from the command lin
 <p>In general, ConEmu installation is easy.
 Just unpack or install to any folder and run `ConEmu.exe`. </p>
 
-<p>For more information about installation options refer to <a href="/en/Installation.html">Installation</a> page. </p>
+<p>For more information about installation options refer to <a href="{{page.docfolder}}/Installation.html">Installation</a> page. </p>
