--- a/_includes/index_ru.html
+++ b/_includes/index_ru.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li>Простой ресайз окна консоли, максимизация и полноэкранный режим (Alt+Enter), который не требует перевода видекарты в текстовый режим; отсутствие проблемы появления полос прокрутки в Far при блокировании (засыпании) компьютера;</li>
 				<li>Встроенная поддержка мультиконсоли (несколько приложений в одном окне ConEmu), возможность запускать новые приложения от имени администратора;</li>
-				<li><a href="/ru/DosBox.html">Простой запуск</a> DOS приложений в Windows 7 и 64битных OS через <a href="http://www.dosbox.com/">DosBox</a>;</li>
+				<li><a href="{{page.docfolder}}/DosBox.html">Простой запуск</a> DOS приложений в Windows 7 и 64битных OS через <a href="http://www.dosbox.com/">DosBox</a>;</li>
 				<li>Консоли, запущенные в режиме администратора помечаются значком &laquo;Щит&raquo;;</li>
 				<li>При выполнении консольных приложений, запущенных из Far, высота консольного буфера автоматически увеличивается. Просмотр полного вывода предыдущей команды - макрос на CtrlO;</li>
 				<li>Можно выбрать тип отображаемого консольного курсора (как в GUI, либо как в консоли), или отключить его мигание;</li>
@@ -38,14 +38,14 @@
 				<li>Улучшенное отображение псевдографических символов (прокрутки, progressbar, и пр.);</li>
 				<li>Поддержка прогресса на иконке в Win7 (ИИ определяет проценты выполнения как по заголовку, так и по содержимому консоли);</li>
 				<li>Окно можно делать прозрачным;</li>
-				<li>И многое другое... смотрите <a href="TableOfContents.html">документацию</a>, <a href="Settings.html">окно настроек</a> и <a href="Whats_New.html">What's New</a>.</li>
+				<li>И многое другое... смотрите <a href="{{page.docfolder}}/TableOfContents.html">документацию</a>, <a href="{{page.docfolder}}/Settings.html">окно настроек</a> и <a href="{{page.docfolder}}/Whats_New.html">What's New</a>.</li>
 			</ul>
 
 
 <h3>Как пользоваться ConEmu</h3>
 
 			<ul>
-				<li><a href="/ru/Settings.html">Настройка ConEmu</a></li>
+				<li><a href="{{page.docfolder}}/Settings.html">Настройка ConEmu</a></li>
 			</ul>
 
 
@@ -53,4 +53,4 @@
 
 			<p>Последнюю версию ConEmu-Maximus5 можно скачать <a href="http://www.fosshub.com/ConEmu.html">здесь</a>.</p>
 
-			<p>Документация <a href="/ru/TableOfContents.html">здесь</a>.</p>
+			<p>Документация <a href="{{page.docfolder}}/TableOfContents.html">здесь</a>.</p>
