--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+{% if page.noindex == true %}<meta name="robots" content="noindex">{% endif %}
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
 <link rel="icon apple-touch-icon" type="image/png" href="/img/logo-114.png" sizes="144x144">
 
