Omit breadcrumbs markup for index.html

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -2,9 +2,9 @@
   <span>
     <a href="{{ page.docfolder }}/"><span>{{ site.site_name }}</span></a>
   </span>
-  <span  id="a"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.breadcrumbs %} itemref="c0" {% endif %}>
+  <span {% if page.url != '/index.html' %} id="a"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.breadcrumbs %} itemref="c0" {% endif %}{% endif %}>
     ›
-    <a href="{{ page.docfolder }}/TableOfContents.html" itemprop="url"><span itemprop="title">{% if page.pagelang == 'ru' %}Документация{% else %}Documentation{% endif %}</span></a>
+    <a href="{{ page.docfolder }}/TableOfContents.html" {% if page.url != '/index.html' %}itemprop="url"{% endif %}><span {% if page.url != '/index.html' %}itemprop="title"{% endif %}>{% if page.pagelang == 'ru' %}Документация{% else %}Documentation{% endif %}</span></a>
   </span>{% for bc in page.breadcrumbs %}
   <span id="c{{ forloop.index0 }}" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% unless forloop.last %} itemref="c{{ forloop.index }}" {% endunless %}>
     ›
