--- a/_includes/schema_search.html
+++ b/_includes/schema_search.html
@@ -5,8 +5,10 @@
    "url": "http://conemu.github.io/",
    "potentialAction": {
      "@type": "SearchAction",
-     "target": "http://conemu.github.io/search?q={search_term_string}",
-     "query-input": "required name=search_term_string"
+     "target": "http://conemu.github.io/search.html?q={searchTerms}",
+     "query-input": "required name=searchTerms"
    }
 }
 </script>
+
+<link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="ConEmu Search">
