Add OpenSearch to each page

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -9,6 +9,8 @@
 {% if page.noindex == true %}<meta name="robots" content="noindex">{% endif %}
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
 <link rel="icon apple-touch-icon" type="image/png" href="/img/logo-114.png" sizes="144x144">
+<!--OpenSearch-->
+{% include schema_search.html %}
 
 <meta name="author" content="@ConEmuMaximus5">
 
