--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -12,11 +12,12 @@
 <meta name="msvalidate.01" content="C3DA7A77EADF40C2ABF460748978E8F9" />
 <meta name='wmail-verification' content='ed799a87ae06320d92a0e7c9f31dec1d' />
 {% include schema_info.html %}
-{% include schema_search.html %}
 {% endif %}
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
 <link rel="icon apple-touch-icon" type="image/png" href="/img/logo-114.png" sizes="144x144">
+<!--OpenSearch-->
+{% include schema_search.html %}
 
 <meta name="author" content="@ConEmuMaximus5">
 
